# downloader-id3-tag-cli

./: .gitignore  CMakeLists.txt  build_macos.sh  build_taglib_macos.sh  build_taglib_win.sh  build_win.sh
cmake/: FindTaglib.cmake
src/: Info.plist.in  arguments.hpp  help.hpp  main.cpp  platform.hpp  tagunion.h
